--- a/SalesApp/SalesApp/Views/GASTOS_OPERATION/Index.cshtml
+++ b/SalesApp/SalesApp/Views/GASTOS_OPERATION/Index.cshtml
@@ -93,5 +93,23 @@
         </td>
     </tr>
 }
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td style="background-color:cornflowerblue; color:white; padding:3px">Total Venta: <b> @Model.Sum(item => item.Price)</b> </td>
+    </tr>
 
 </table>
