--- a/SalesApp/SalesApp/Views/Shared/_Layout.cshtml
+++ b/SalesApp/SalesApp/Views/Shared/_Layout.cshtml
@@ -46,9 +46,9 @@
                     {
                     <li>@Html.ActionLink("R-Angreju", "Index", "Lancha", new { id = 3 }, new { @class = "navbar-brand" })</li>
                     <li>@Html.ActionLink("R-Magic", "Index", "Lancha", new { id = 4 }, new { @class = "navbar-brand" })</li>
-                    <li>@Html.ActionLink("R-Magic", "Index", "Lancha", new { id = 4 }, new { @class = "navbar-brand" })</li>
                     <li>@Html.ActionLink("R-SailFish", "Index", "Lancha", new { id = 8 }, new { @class = "navbar-brand" })</li>
                     <li>@Html.ActionLink("R-Solitario", "Index", "Boat", new { id = 5 }, new { @class = "navbar-brand" })</li>
+                    <li>@Html.ActionLink("R-Ventas", "Index", "sale", new { id = 10 }, new { @class = "navbar-brand" })</li>
 
                     }
 
