--- a/SalesApp/SalesApp/Content/bootstrap.css
+++ b/SalesApp/SalesApp/Content/bootstrap.css
@@ -2275,7 +2275,7 @@ th {
   text-align: left;
 }
 
-.tableColor {
+.table{
   width: 100%;
   max-width: 100%;
   margin-bottom: 10px;
@@ -2283,19 +2283,19 @@ th {
   background-color: #fff;
 }
 
-.tableColor > thead > tr > th,
-.tableColor > tbody > tr > th,
-.tableColor > tfoot > tr > th,
-.tableColor > thead > tr > td,
-.tableColor > tbody > tr > td,
-.tableColor > tfoot > tr > td {
+.table> thead > tr > th,
+.table> tbody > tr > th,
+.table> tfoot > tr > th,
+.table> thead > tr > td,
+.table> tbody > tr > td,
+.table> tfoot > tr > td {
   padding: 4px;
   line-height: 1.42857143;
   vertical-align: middle;
   border-top: 1px solid #ddd;
 }
 
-.tableColor > thead > tr > th {
+.table> thead > tr > th {
   vertical-align: middle;
   align-content: center;
   border: 1px solid #fff;
@@ -2303,15 +2303,15 @@ th {
   font-size: 12px;
 }
 
-.tableColor > caption + thead > tr:first-child > th,
-.tableColor > colgroup + thead > tr:first-child > th,
-.tableColor > thead:first-child > tr:first-child > th,
-.tableColor > caption + thead > tr:first-child > td,
-.tableColor > colgroup + thead > tr:first-child > td,
-.tableColor > thead:first-child > tr:first-child > td {
+.table> caption + thead > tr:first-child > th,
+.table> colgroup + thead > tr:first-child > th,
+.table> thead:first-child > tr:first-child > th,
+.table> caption + thead > tr:first-child > td,
+.table> colgroup + thead > tr:first-child > td,
+.table> thead:first-child > tr:first-child > td {
   border-top: 0;
 }
-.tableColor > tbody + tbody {
+.table> tbody + tbody {
   border-top: 2px solid #ddd;
 }
 
@@ -4303,41 +4303,6 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   line-height: 18px;
 }
 
-.LinkButton{
-    float: left;
-    color:#23527c; 
-    background-color: #e6e6e6; 
-    border-color:#adadad; 
-    cursor: pointer; 
-    margin-bottom: 11px; 
-    margin-left: 5px; 
-    margin-right: 5px; 
-    padding-top: 4px; 
-    padding-bottom: 4px; 
-    padding-right: 13px; 
-    padding-left: 13px; 
-    border-radius:8px;
-     line-height: 18px; 
-     font-size: 13px;
-}
-
-.TdLinkButton{
-    color:#23527c; 
-    background-color: #e6e6e6; 
-    border-color:#adadad; 
-    cursor: pointer; 
-    margin-top: 1px; 
-   margin-left: 2px; 
-   margin-right: 2px; 
-    padding-top: 4px; 
-    padding-bottom: 4px; 
-    padding-right: 4px; 
-    padding-left: 4px; 
-    border-radius:5px;
-     line-height: 13px; 
-     font-size: 11px;
-     float: left;
-}
 .navbar-brand:hover,
 .navbar-brand:focus {
   text-decoration: none;
