--- a/SalesApp/SalesApp/Views/PRODUCT_RESERVATION/Create.cshtml
+++ b/SalesApp/SalesApp/Views/PRODUCT_RESERVATION/Create.cshtml
@@ -106,7 +106,21 @@
                             @Html.ValidationMessageFor(model => model.ProductReservationTypeId, "", new { @class = "text-danger" })
                         </div>
                     </div>
-                    @if (Request["CategoryProductId"] == "5")
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.FacturaNr, "FacturaNr", htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-7">
+                            @Html.EditorFor(model => model.FacturaNr, new { htmlAttributes = new { @class = "form-control" } })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.NetoPrice, "NetoPrice", htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-7">
+                            @Html.EditorFor(model => model.NetoPrice, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.NetoPrice, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+             @if (Request["CategoryProductId"] == "5")
                     {
                         <div class="form-group">
                             @Html.LabelFor(model => model.CabinId, "CABIN", htmlAttributes: new { @class = "control-label col-md-2" })
